@@ -49,6 +49,7 @@ RCPP_MODULE(acmacs_chart)
             .method("remove_all_projections", &Chart::remove_all_projections)
             .property<PlotSpec>("plot_spec", &Chart::plot_spec)
             .property<Titers>("titers", &Chart::titers)
+            .method("remove_layers", &Chart::remove_layers)
             .method("column_bases", &Chart::column_bases_2, "either forced or calculated column bases, i.e. the ones used for stress calculation and optimization")
             .method("column_bases", &Chart::column_bases_1, "either forced or calculated column bases, i.e. the ones used for stress calculation and optimization")
             // .method("column_bases", &Chart::column_bases_1s, "either forced or calculated column bases with the provided minimum_column_basis")
