@@ -18,6 +18,7 @@ class Titers : public wrapper<acmacs::chart::TitersModify>
     void set_dontcare_for_serum(size_t sr_no) { obj_->dontcare_for_serum(sr_no - 1); }
     void multiply_by_for_antigen(size_t ag_no, double multiply_by) { obj_->multiply_by_for_antigen(ag_no - 1, multiply_by); }
     void multiply_by_for_serum(size_t sr_no, double multiply_by) { obj_->multiply_by_for_serum(sr_no - 1, multiply_by); }
+    size_t number_of_layers() { return obj_->number_of_layers(); }
     Rcpp::StringMatrix all() const;
 };
 RCPP_EXPOSED_CLASS_NODECL(Titers);
