@@ -5,6 +5,9 @@ test_that("number of antigens", { expect_equal(chart1$number_of_antigens, 22) })
 test_that("number of sera", { expect_equal(chart1$number_of_sera, 6) })
 test_that("number of points", { expect_equal(chart1$number_of_points, chart1$number_of_antigens + chart1$number_of_sera) })
 test_that("number of projections", { expect_equal(chart1$number_of_projections, 1) })
+test_that("number of layers", { expect_equal(chart1$titers$number_of_layers, 0) })
+chart1$remove_layers()
+test_that("number of layers upon layers removal", { expect_equal(chart1$titers$number_of_layers, 0) })
 
 chart2 <- new(acmacs.Chart, "cdc-h1pdm-2009.acd1.bz2")
 test_that("number of antigens", { expect_equal(chart2$number_of_antigens, 303) })
@@ -12,3 +15,6 @@ test_that("number of sera", { expect_equal(chart2$number_of_sera, 31) })
 test_that("number of points", { expect_equal(chart2$number_of_points, chart2$number_of_antigens + chart2$number_of_sera) })
 test_that("number of projections", { expect_equal(chart2$number_of_projections, 1) })
 test_that("column bases", { expect_equal(chart2$column_bases(), c(7.33360262826828, 9, 9, 8, 9, 9, 7, 7, 7, 8, 9, 9, 9, 9, 11, 8, 10, 10, 9, 9, 7, 9, 9, 8, 10, 11, 11, 10, 10, 8, 9)) })
+test_that("number of layers", { expect_equal(chart2$titers$number_of_layers, 6) })
+chart2$remove_layers()
+test_that("number of layers upon layers removal", { expect_equal(chart2$titers$number_of_layers, 0) })
