@@ -5,6 +5,8 @@ acmacs.r NEWS -- history of user-visible changes.
 ** signle thread variant of the grid test
 ** remove all projections in the chart (chart$remove_all_projections())
 ** remove all projections except one in the chart (chart$remove_all_projections_except(number))
+** get number of layers (chart$titers$number_of_layers)
+** remove layers (flatten) (chart$remove_layers())
 
 
 * Changes in 2.6 (2018-07-15)
